--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -50,6 +50,7 @@
                 android:textSize="15sp" />
 
             <TextView
+                android:id="@+id/setting_size"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
