--- a/app/src/main/res/layout/fragment_cinema_layout.xml
+++ b/app/src/main/res/layout/fragment_cinema_layout.xml
@@ -40,7 +40,9 @@
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_cinema"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></android.support.design.widget.TabLayout>
+        android:layout_height="wrap_content"
+        app:tabBackground="@drawable/tab_label_back"
+        app:tabTextColor="#fff"></android.support.design.widget.TabLayout>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_cinema"
