--- a/app/src/main/res/layout/fragment_nearby_cinema_layout.xml
+++ b/app/src/main/res/layout/fragment_nearby_cinema_layout.xml
@@ -2,12 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:background="#161B33"
+    android:padding="20dp"
     android:layout_height="match_parent">
     <!--附近影院-->
 
-    <TextView
+    <!--<android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="附近影院"
-        android:textSize="30sp"/>
+        android:layout_height="wrap_content"
+        android:id="@+id/nearby_cinema_RecyclerView"></android.support.v7.widget.RecyclerView>
+    -->
+    <com.jcodecraeer.xrecyclerview.XRecyclerView
+        android:layout_width="match_parent"
+        android:id="@+id/nearby_cinema_RecyclerView"
+        android:layout_height="wrap_content"></com.jcodecraeer.xrecyclerview.XRecyclerView>
 </LinearLayout>
