--- a/app/src/main/res/layout/fragment_recommend_cinema_item_layout.xml
+++ b/app/src/main/res/layout/fragment_recommend_cinema_item_layout.xml
@@ -3,6 +3,9 @@
     xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:padding="20dp"
+    android:background="#1E2444"
+    android:layout_marginTop="10dp"
     android:orientation="vertical">
 
     <RelativeLayout
